tests/unit/compile/cases/syntax-errors/21.instruction.block-broken.t
Lorem {{ %block ?? }} ipsum
---- THROW% ----
Unexpected <InlineText "?? ">; expected: <name> near `?? }} ipsum` in `%s` at line 1
